<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/Home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/nav_choose_slot"
            android:title="@string/Choose_slot"
            android:icon="@drawable/ic_choose_slot"/>

    </group>

    <group android:checkableBehavior="single">
        <item
            android:title="@string/LogOut">
            <menu>
                <item
                    android:id="@+id/nav_log_out"
                    android:title="@string/LogOut"
                    android:icon="@drawable/ic_signout"/>
            </menu>
        </item>
    </group>
</menu>