<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:paddingStart="50dp"
    android:paddingEnd="50dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:fontFamily="@font/bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quote_app"
        android:textSize="16sp"
        android:fontFamily="@font/medium"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signinwithgoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_field_input"
        android:drawableStart="@drawable/icon_google"
        android:text="@string/sign_in_google"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:paddingStart="70dp"
        android:paddingEnd="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:fontFamily="@font/bold"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gmail"
                android:fontFamily="@font/semibold"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_field_input"
                android:ems="10"
                android:fontFamily="@font/medium"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColorHint="@color/extralistGray"
                android:textSize="16sp"
                android:autofillHints="" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:fontFamily="@font/semibold"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_field_input"
                    android:ems="10"
                    android:fontFamily="@font/medium"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColorHint="@color/extralistGray"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/show_hide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-31dp"
                    android:background="@color/transparent"
                    android:paddingRight="10dp"
                    android:src="@drawable/ic_show"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_btn"
        android:drawableEnd="@drawable/ic_next"
        android:fontFamily="@font/semibold"
        android:minHeight="48dp"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/donthaveaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donthave"
        android:fontFamily="@font/semibold"
        android:layout_marginTop="20dp"
        />







</LinearLayout>