<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkGray"
    tools:context=".CountUp_time">

    <LinearLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:paddingEnd="30dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_ic"
                android:padding="10dp"
                android:src="@drawable/ic_back"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:text="@string/CountUp_Time"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/semibold"
                    android:text="@string/floor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/floor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/semibold"
                    android:text="@string/floor"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/semibold"
                    android:text="@string/parking_slot"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/parking_slot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/semibold"
                    android:text="@string/default_parking_lot"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/semibold"
                    android:text="@string/license_plate"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/license_plate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/semibold"
                    android:text="@string/license_plate_default"
                    android:maxEms="10"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="50dp"
        android:paddingEnd="50dp">

        <TextView
            android:id="@+id/price"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/yellow"
            android:text="@string/price"
            android:fontFamily="@font/semibold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <RelativeLayout
            android:id="@+id/field_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/progress_timer"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerInParent="true"
                app:cpb_background_progressbar_color="@color/bg_stroke_for_bg_gray"
                app:cpb_background_progressbar_width="20dp"
                app:cpb_progress_max="3600"
                app:cpb_progressbar_color="@color/yellow"
                app:cpb_progressbar_width="15dp"
                app:cpb_round_border="true" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/car_slot"
                android:layout_centerInParent="true" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_centerInParent="true"
                android:src="@drawable/circle_stroke" />

        </RelativeLayout>

        <TextView
            android:id="@+id/descript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/HeavyGray"
            app:layout_constraintTop_toBottomOf="@id/field_progress"
            android:text="@string/descript_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/semibold"
            />

        <TextView
            android:id="@+id/countup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_out"
            android:fontFamily="@font/bold"
            android:textSize="45sp"
            android:textColor="@color/yellow"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/descript"
            app:layout_constraintTop_toBottomOf="@+id/descript"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/bg_btn"
            android:fontFamily="@font/semibold"
            app:layout_constraintTop_toBottomOf="@id/countup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:minHeight="48dp"
            android:text="@string/payment"
            android:textAllCaps="false"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>